# scale-codecs-cpp-ext

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  decoded_cpp.json  decoded_python.json  metadata_tests.cpp  node_tests.cpp  run_tests.cpp  scale-codecs-lib.hpp  simple_tests.cpp
include/tclap/: Makefile
json/: metadata.json  metadata_3.json  metadata_3_formatted.json  metadata_decoded.json  metadata_encoded.json  testing19.json
metatests/00_comparing_js/: encoded_extrinsic  extrinsic_decode.py  js_decoded_extrinsic.json  metadata_robonomics.json  python_decoded_extrinsic.json
scripts/: example.py  format.py
src/: core.h  decoder.hpp  encoder.cpp  encoder.hpp  metadata.h  scale-codecs-lib.cpp
